--- a/SpringMailProj1-Boot/src/main/resources/application.properties
+++ b/SpringMailProj1-Boot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username= gautam.kr0352@gmail.com
-spring.mail.password= @gautam@
+spring.mail.username= xxxx
+spring.mail.password= xxxx
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.properties.mail.smtp.starttls.required= true
 spring.mail.properties.mail.smtp.auth= true
